failures/clang_other_error_6jdDOQ.i.stderr.txt
src/network/networkd-ndisc.c:162:25: error: void function 'ndisc_router_handler' should not return a value [-Wreturn-type]
                        return log_link_warning_errno(link, r, "Could not set IPv6LL address in DHCP client: %m");
                        ^      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src/network/networkd-ndisc.c:212:25: error: void function 'ndisc_handler' should not return a value [-Wreturn-type]
                        return log_link_warning_errno(link, r, "Could not set IPv6LL address in DHCP client: %m");
                        ^      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 errors generated.
